video width to prevent horizontal scroll && mobile pagination to 10

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -98,7 +98,8 @@ header {
     }
 }
 
-img {
+img,
+video {
     max-width: 100%;
 }
 
